--- a/cargo.toml
+++ b/cargo.toml
@@ -1,9 +1,13 @@
+[package]
+name = "my-telegram-rpg-bot"
+version = "0.1.0"
+edition = "2021"
+
 [dependencies]
-teloxide = "0.12"
-tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
-dotenvy = "0.15"
-uuid = "1.3"
+tokio = { version = "1", features = ["full"] }
+teloxide = { version = "0.6", features = ["macros", "rustls-tls"] }
+uuid = { version = "1.0", features = ["v4"] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
 rand = "0.8"
